* Speed: various components of the parsing process have been optimized, which compensates the impact of increased parser complexity, resulting in slightly faster parsing speed
* New tag: <txp:rsd /> specifies the Really Simple Discovery endpoint for XML-RPC clients
* New tag: <txp:variable />
* New tag: <txp:if_variable>
* Changed tag: <txp:article /> can be used as a container tag
* Changed tag: <txp:article /> allows new attributes 'wraptag' and 'break'
* Changed tag: <txp:article_custom /> can be used as a container tag
* Changed tag: <txp:article_custom /> allows new attributes 'wraptag' and 'break'
* Changed tag: <txp:article_custom /> allows comma separated list for 'id' attributes (this doesn't imply a sort order).
* Changed tag: <txp:category /> applies 'class' attribute to the <a> element when wraptag is empty.
* Changed tag: <txp:category_list /> can be used as a container tag
* Changed tag: <txp:file_download_list /> can be used as a container tag
* Changed tag: <txp:if_article_id /> defaults to the current article's id.
* Changed tag: <txp:linklist /> can be used as a container tag
* Changed tag: <txp:recent_comments /> can be used as a container tag
* Changed tag: <txp:recent_comments /> allows new attribute 'offset'
* Changed tag: <txp:search_input /> allows new attribute 'html_id' to set the form's id.
* Changed tag: <txp:section /> applies the 'class' attribute to the <a> element when wraptag is empty.
* Changed tag: <txp:section_list /> can be used as a container tag
* XML-RPC: server now included in main TXP package, disabled by default
* Articles tab: added 'article image' and 'keywords' as search criteria
* Categories tab: categories cannot be accidentally deleted if they are still in use.
* Write tab: Concurrent article edit warning
* Write tab: WYSIWYG preview for draft/pending/hidden articles
* Images tab: added 'alternate text' and 'caption' as search criteria
* Images tab: multi-edit functionality (delete, change category)